feat(reranking): publish qualified MiniLM ModelJar